syntax = "proto3";
import public "global_options.proto";

option go_package="./;proto";
option java_package = "org.liquibase.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "TagExistsProto";

package liquibase;

service TagExistsService {
  rpc execute(TagExistsRequest) returns (Response) {}
}

/* Verify the existence of the specified tag */
message TagExistsRequest {
  optional string default_catalog_name = 1; // The default catalog name to use for the database connection
  optional string default_schema_name = 2; // The default schema name to use for the database connection
  optional string driver = 3; // The JDBC driver class
  optional string driver_properties_file = 4; // The JDBC driver properties file
  optional string password = 5; // Password to use to connect to the database
  string tag = 6; // *required* Tag to check
  string url = 7; // *required* The JDBC database connection URL
  optional string username = 8; // Username to use to connect to the database
  liquibase.GlobalOptions global_options = 9;
}

message Response {
  string message = 1;
}
